feat(cli): execute compile tasks
- Wire the gdcc command to configure mappings, submit API compile tasks, poll completion, drain verbose events, and render final results.
- Add prefix and explicit class-map merge behavior backed by shared frontend default class-name derivation.
- Preserve canonical-name map order through API task snapshots and prefer cancellation outcomes during interrupted native builds.
- Cover CLI input, mapping, task outcomes, and frontend default class-name derivation with targeted tests.
- Update the CLI implementation plan with completed mapping, task polling, and result rendering status.